<resources>
    <string name="app_name">Tijd voor actualiteit</string>
    <string name="action_settings">Settings</string>
    <string name="authTokenKey">authToken</string>

    <!-- Login screen: -->
    <string name="login_label">Gebruikersnaam</string>
    <string name="login_password">Wachtwoord</string>
    <string name="login_button">Login</string>
    <string name="register_button">Registreer</string>
    <string name="nog_geen_account">Ik heb nog geen account</string>
    <string name="wel_al_account">Ik heb al een account</string>
    <string name="msg_account_bestaat_al">Gebruikersnaam bestaat al, probeer een andere naam</string>
    <string name="msg_verkeerde_gegevens">Verkeerde gebruikersnaam of wachtwoord. Probeer opnieuw (mogelijk bestaat het account nog niet)</string>
    <string name="msg_account_aangemaakt">Account aangemaakt, u kunt inloggen</string>
    <string name="msg_empty_list">U heeft nog geen favoriete artikelen</string>

    <!-- Navigation drawer: -->
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Sluit menu</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="favourites">Favorieten</string>
    <string name="all_articles">Alle artikelen</string>

    <string name="cat">Categorieën</string>
    <string name="cat_algemeen">Algemeen</string>
    <string name="cat_sport">Sport</string>
    <string name="cat_opmerkelijk">Opmerkelijk</string>
    <string name="cat_games">Games</string>
    <string name="cat_internet">Internet</string>
    <string name="cat_wetenschap">Wetenschap</string>

    <string name="nav_title">Tijd voor Actualiteit</string>
    <string name="nav_subtitle">Het beste nieuws van Nederland!</string>

    <!-- LOGS -->
    <string name="log_unsuccesful">Response is unsuccessful of empty</string>
    <string name="log_no_data_articles">Couldn\'t fetch any data while trying to load more articles</string>
    <string name="log_no_data">Couldn\'t fetch any data</string>
    <string name="log_response_unsuccessful">Response is unsuccessful of empty</string>
    <string name="log_http_tag">HTTP</string>


</resources>
