<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/login_label"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:inputType="textNoSuggestions"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/loginField"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/login_password"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordField"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/login_button"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:id="@+id/loginButton"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/darkgrey"
        android:text="@string/nog_geen_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/nog_geen_account_button"/>


</LinearLayout>